WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243223
[Playstation] Fix build break after
252799@main
https://bugs.webkit.org/show_bug.cgi?id=243223
Summary
[Playstation] Fix build break after 252799@main
Jigen Zhou
Reported
2022-07-26 12:31:46 PDT
[2/783] Linking CXX executable bin\LLIntSettingsExtractor.elf FAILED: bin/LLIntSettingsExtractor.elf cmd.exe /C "cd . && C:\orbis\sdk\host_tools\bin\orbis-clang++.exe --target=x86_64-scei-ps4 -Wno-dll-attribute-on-redeclaration -fdiagnostics-color=always -fcolor-diagnostics -Wextra -Wall -pipe -Wno-noexcept-type -Wno-psabi -Wno-misleading-indentation -Wno-parentheses-equality -Qunused-arguments -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fno-strict-aliasing -fno-exceptions -fno-rtti -g -L"C:/ORBIS/SDK/../internal/target/lib" C:/playstationrequirements/lib/libdl.a -Wl,--wrap=dlopen -Wl,--wrap=dlclose -Wl,--wrap=dlsym -Wl,--wrap=dlerror -Wl,--wrap=dladdr @CMakeFiles\LLIntSettingsExtractor.rsp -o bin\LLIntSettingsExtractor.elf && cd ." orbis-ld 9.50.0.7 (rel,orbis,9.500 @523657 x64) C:\orbis\sdk\host_tools\bin\orbis-ld.exe Link : error: L0039: reference to undefined symbol `mkdtemp' in file "C:\BW\PlayStation-Debug-Build\build\WebKitBuild\Debug\Source\WTF\wtf\CMakeFiles\WTF.dir\FileSystem.cpp.o" FileSystem.cpp : error: L0039: reference to undefined symbol `mkdtemp' in file "C:\BW\PlayStation-Debug-Build\build\WebKitBuild\Debug\Source\WTF\wtf\CMakeFiles\WTF.dir\FileSystem.cpp.o" orbis-clang++: error: linker command failed with exit code 1 (use -v to see invocation) [3/783] Linking CXX executable bin\TestWTF.elf FAILED: bin/TestWTF.elf
Attachments
Add attachment
proposed patch, testcase, etc.
Jigen Zhou
Comment 1
2022-07-26 14:31:17 PDT
The use of mkdtemp for the fallback implementation of createTemporaryDirectory() in
r252799
does not work for PlayStation platform.
Fujii Hironori
Comment 2
2022-07-26 15:06:48 PDT
It's
252799@main
, not
r252799
.
bug#232499
Jigen Zhou
Comment 3
2022-07-28 22:19:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2840
EWS
Comment 4
2022-07-29 10:38:10 PDT
Committed
252953@main
(0165256e0964): <
https://commits.webkit.org/252953@main
> Reviewed commits have been landed. Closing PR #2840 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2022-07-29 10:39:18 PDT
<
rdar://problem/97793040
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug