[Playstation] Fix build break after 252799@main

https://bugs.webkit.org/show_bug.cgi?id=243223

Unreviewed build fix.
Skip createTemporaryDirectory() for PlayStation since temporary directory is not supported on PlayStation.

Canonical link: https://commits.webkit.org/252953@main